vlib/v/checker/tests/array_generic_methods_err.out
vlib/v/checker/tests/array_generic_methods_err.vv:4:23: error: cannot use `[]string` as `string` in argument 1 to `.contains()`
    2 | fn generic_fn[T]() {
    3 |     mut arr := []T{}
    4 |     println(arr.contains(arr))
      |                          ~~~
    5 |     arr.delete(arr)
    6 |     arr.index(arr)
vlib/v/checker/tests/array_generic_methods_err.vv:5:13: error: cannot use `[]string` as `int` in argument 1 to `.delete()`
    3 |     mut arr := []T{}
    4 |     println(arr.contains(arr))
    5 |     arr.delete(arr)
      |                ~~~
    6 |     arr.index(arr)
    7 | }
vlib/v/checker/tests/array_generic_methods_err.vv:6:12: error: cannot use `[]string` as `string` in argument 1 to `.index()`
    4 |     println(arr.contains(arr))
    5 |     arr.delete(arr)
    6 |     arr.index(arr)
      |               ~~~
    7 | }
    8 |
